update logo and font

--- a/themes/hexo-theme-typescript/_config.yml
+++ b/themes/hexo-theme-typescript/_config.yml
@@ -1,7 +1,7 @@
 # Meta
 description: mirone's blog.
 keywords: hexo,mirone,blog
-site_desc: otaku keeps alive
+site_desc: live and let die
 
 # Navigation
 navigation:
